# ProgrammingPrinciples

./: CMakeLists.txt  README.md  hello_world.cpp
Book/: prime_checker.cpp
Book/Chapter1/: 101.cpp  102.cpp  103.cpp  104.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  110.cpp  111.cpp  113.cpp
Book/Chapter3/: 101.cpp  102.cpp  103.cpp  104.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  110.cpp  111.cpp  112.cpp  113.cpp  114.cpp  115.cpp  116.cpp  117.cpp  118.cpp  119.cpp  120.cpp  121.cpp  122.cpp
Book/Chapter5/: 101.cpp  102.cpp  103.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  111.cpp  112.cpp  113.cpp  todo.md
Codewars/: 101.cpp
KBTU/Arrays/: 2d_arrays.cpp
KBTU/ExamPrep/: 102.cpp  103.cpp  104.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp
KBTU/Lab1/: 101.cpp  102.cpp  103.cpp  104.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  110.cpp
KBTU/Lab10/: 1001.cpp  1002.cpp  1003.cpp
KBTU/Lab11/: 1101.cpp  1103.cpp  1104.cpp  1105.cpp  1107.cpp  1108.cpp  1109.cpp  1110.cpp  1113.cpp
KBTU/Lab12/: 1201.cpp  1202.cpp  1203.cpp  1204.cpp  1205.cpp  1206.cpp  1207.cpp  1208.cpp  1209.cpp  1210.cpp  1211.cpp  TeachersNote.cpp
KBTU/Lab2/: 201.cpp  202.cpp  203.cpp  204.cpp  205.cpp  206.cpp  207.cpp  208.cpp  209.cpp  210.cpp  ab.cpp
KBTU/Lab3/: 301.cpp  302.cpp  304.cpp  305.cpp
KBTU/Lab4/: 401.cpp  402.cpp  403.cpp  404.cpp  405.cpp  406.cpp  407.cpp  408.cpp  409.cpp  410.cpp  411.cpp  412.cpp  413.cpp  414.cpp  415.cpp
KBTU/Lab5/: 101.cpp  (+2 more)
SimpleCalculator/: calculator00.cpp  calculator01.cpp  calculator02.cpp  calculator02buggy.cpp
(+54 files in other folders)
