cmake_minimum_required(VERSION 3.30)
project(Projects)

set(CMAKE_CXX_STANDARD 20)

add_executable(Projects hello_world.cpp
        Lab1/101.cpp
        Lab1/102.cpp
        Lab1/103.cpp
        Lab1/104.cpp
        Lab1/107.cpp
        Lab1/108.cpp
        Lab1/109.cpp
        Lab1/110.cpp
        Lab1/105.cpp
        Lab1/106.cpp
        Week3/a.cpp
        Lab2/201.cpp
        Lab2/202.cpp
        Lab2/203.cpp
        Lab2/204.cpp
        Lab2/205.cpp
        Lab2/206.cpp
        Lab2/207.cpp
        Lab2/208.cpp
        Lab2/209.cpp
        Lab2/210.cpp
        KBTU/Lab2/ab.cpp
        KBTU/Lab3/301.cpp
        KBTU/Lab3/302.cpp
        Book/Chapter1/101.cpp
        Book/Chapter1/102.cpp
        Book/Chapter1/103.cpp
        KBTU/Lab3/305.cpp
        Book/Chapter1/104.cpp)
